# BirdMazeGame

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  imgui.ini
assets/: auto-tiled-tile-map-walls-binary-data  tileboundgoodpelletspool.json  tilemap.json  tileset.json
in-progress-assets/: .robert-anim-colored.kra-autosave.kra  .robert2.png-autosave.kra  auto-tiled-tile-map-walls-binary-data  dandy-anim.kra  door-breathing.kra  dot.png.kra  robert-anim-colored.kra  robert-anim.kra  robert2.png.kra  tileset (2).json  tileset.json
src/: global.cpp  global.h
src/components/: components.h
src/editor/: _main.cpp  editor.cpp  editor.h  level_data.cpp  level_data.h  properties_panels.cpp
src/engine/: global.cpp  global.h
src/engine/input/: input.h  input_init.cpp
src/engine/sprite/: animated_sprite.h  sprite_sheet.cpp  sprite_sheet.h
src/engine/tile/: tilemap.h  tilemap_init.cpp  tilemap_util.cpp  tileset.h  tileset_util.cpp
src/engine/util/: util_draw.cpp  util_draw.h  util_error_handling.cpp  util_error_handling.h  util_load_save.cpp  util_load_save.h  util_misc.cpp  util_misc.h  util_panning.cpp  util_panning.h
src/game/: _main.cpp
src/input/: input.h  input_init.cpp
src/pellet_pools/: moving_pellets_pool.cpp  moving_pellets_pool.h  targeting_pellets_pool.h  tile_bound_good_pellets_pool.cpp  tile_bound_good_pellets_pool.h
src/prefabs/: prefabs.cpp
src/sprite/: animated_sprite.h  sprite_sheet.cpp  sprite_sheet.h
src/systems/: custom_phases.h
src/tile/: tilemap.h  tilemap_init.cpp  tilemap_util.cpp  tileset.h  tileset_util.cpp
src/util/: util_draw.cpp  util_draw.h  util_error_handling.cpp  util_error_handling.h  util_load_save.cpp  util_load_save.h  util_misc.cpp  util_panning.h
test/: test_resize.cpp  test_tilemap.cpp  whatever.cpp
